--- a/Split Landing PAge/index.html
+++ b/Split Landing PAge/index.html
@@ -15,9 +15,20 @@
 			referrerpolicy="no-referrer"
 		/>
 		<link rel="stylesheet" href="style.css" />
-		<title>Movie App</title>
+		<title>Split Landing Page</title>
 	</head>
 	<body>
+		<div class="container">
+			<div class="split left">
+				<h1>Helen Keller</h1>
+				<a href="#" class="btn"> Vote Now</a>
+			</div>
+
+			<div class="split right">
+				<h1>Forklift Boi</h1>
+				<a href="#" class="btn"> Vote Now </a>
+			</div>
+		</div>
 		<script src="script.js"></script>
 	</body>
 </html>
