--- a/Random Choice/index.html
+++ b/Random Choice/index.html
@@ -15,7 +15,7 @@
 			referrerpolicy="no-referrer"
 		/>
 		<link rel="stylesheet" href="style.css" />
-		<title>Movie App</title>
+		<title>My project</title>
 	</head>
 	<body>
 		<script src="script.js"></script>
