--- a/Movies App/index.html
+++ b/Movies App/index.html
@@ -29,53 +29,7 @@
 			</form>
 		</header>
 
-		<main id="main">
-			<div class="movie">
-				<img src="img/felix-mooneeram-evlkOfkQ5rE-unsplash.jpg" />
-				<div class="movie-info">
-					<h3>Movie Title</h3>
-					<span class="green">9.8</span>
-				</div>
-				<div class="overview">
-					<h3>Overview</h3>
-					Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic,
-					voluptatum atque? Id fugiat accusamus quae, suscipit commodi
-					nihil placeat molestias corporis, repellendus temporibus
-					consequatur asperiores architecto nesciunt iste, laboriosam
-					laudantium.
-				</div>
-			</div>
-			<div class="movie">
-				<img src="img/felix-mooneeram-evlkOfkQ5rE-unsplash.jpg" />
-				<div class="movie-info">
-					<h3>Movie Title</h3>
-					<span class="orange">9.8</span>
-				</div>
-				<div class="overview">
-					<h3>Overview</h3>
-					Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic,
-					voluptatum atque? Id fugiat accusamus quae, suscipit commodi
-					nihil placeat molestias corporis, repellendus temporibus
-					consequatur asperiores architecto nesciunt iste, laboriosam
-					laudantium.
-				</div>
-			</div>
-			<div class="movie">
-				<img src="img/felix-mooneeram-evlkOfkQ5rE-unsplash.jpg" />
-				<div class="movie-info">
-					<h3>Movie Title</h3>
-					<span class="red">9.8</span>
-				</div>
-				<div class="overview">
-					<h3>Overview</h3>
-					Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic,
-					voluptatum atque? Id fugiat accusamus quae, suscipit commodi
-					nihil placeat molestias corporis, repellendus temporibus
-					consequatur asperiores architecto nesciunt iste, laboriosam
-					laudantium.
-				</div>
-			</div>
-		</main>
+		<main id="main"></main>
 		<script src="script.js"></script>
 	</body>
 </html>
