did some more projects and things

--- a/ButtonRipple/index.html
+++ b/ButtonRipple/index.html
@@ -15,9 +15,12 @@
 			referrerpolicy="no-referrer"
 		/>
 		<link rel="stylesheet" href="style.css" />
-		<title></title>
+		<title>Buton Ripple Effect</title>
 	</head>
 	<body>
+		<button class="ripple">
+			Click Me </span>
+		</button>
 		<script src="script.js"></script>
 	</body>
 </html>
