--- a/Theme Clock/index.html
+++ b/Theme Clock/index.html
@@ -15,9 +15,21 @@
 			referrerpolicy="no-referrer"
 		/>
 		<link rel="stylesheet" href="style.css" />
-		<title></title>
+		<title>Theme Clock</title>
 	</head>
 	<body>
+		<!--- Inspired by dribble shot Alarm Clock -->
+		<button class="toggle">Dark Mode</button>
+		<div class="clock-container">
+			<div class="clock">
+				<div class="needle hour"></div>
+				<div class="needle minute"></div>
+				<div class="needle second"></div>
+				<div class="center-point"></div>
+			</div>
+			<div class="time"></div>
+			<div class="date"></div>
+		</div>
 		<script src="script.js"></script>
 	</body>
 </html>
